edit and test commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mark Watson's Portfolio</title>
+</head>
+<body>
+    <main>
+        <h1>Hi, my name is Mark Watson</h1>
+        <h2>I'm a Web Developer</h2>
+    </main>
+</body>
+</html>
