--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Mark Watson's Portfolio</title>
   <!-- Bootstrap 4 CDN / HOSTED -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- LOCAL -->
   <link rel="stylesheet" href="style.css">
-  <script src="https://kit.fontawesome.com/ab8cfa39d2.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -35,19 +35,19 @@
           <a class="nav-link" href="#about">About</a>
         </li>
         <li class="mr-4 nav-item">
-          <a class="nav-link" href="#">Projects</a>
+          <a class="nav-link" href="#projects">Projects</a>
         </li>
         <li class="mr-4 nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="#contact">Contact</a>
         </li>
       </ul>
     </div>
   </nav>
 
 
-  <section id="about" class="pt-5">
-    <h2 class="text-center mb-5">ABOUT</h2>
-    <div class="container-fluid pt-5">
+  <section id="about" class="mt-5">
+    <h2 class="text-center p-5">ABOUT</h2>
+    <div class="container-fluid p-5">
       <div class="row justify-content-center">
         <figure class="col text-center">
           <img id="profile-img" src="imgs/mjw-profile-min.jpg" alt="">
@@ -55,7 +55,7 @@
         <div id="card-container" class="col">
           <div class="card" style="width: 35rem;">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Title here</h5>
               <p class="card-text"> Quisque nisl ex, feugiat quis odio eget, semper mollis diam. Morbi ac dignissim lorem, vitae faucibus nunc. Fusce erat urna, consequat non consequat ut, pulvinar quis ligula. In luctus dictum nisl, at finibus felis. Morbi scelerisque leo augue, cursus facilisis augue fermentum sed. Nam eu tortor sed diam tincidunt rhoncus. Nunc eget scelerisque justo, pulvinar mattis nibh. Nulla posuere neque et nibh mollis lobortis. Curabitur tincidunt mollis elit, ac sagittis lacus pretium sit amet. Nulla dapibus, justo in pretium tristique, eros sapien commodo sem.</p>
               <p>Donec vitae molestie arcu. Donec maximus lorem ac lacus sagittis convallis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed eget pulvinar mi. Donec non ornare velit, eget egestas neque. Pellentesque mattis accumsan diam, eu eleifend erat efficitur sit amet. Quisque non nisl id urna euismod lobortis ut id urna. Aenean blandit risus sit amet tortor sagittis rhoncus. Quisque a viverra arcu, at pretium purus. Aliquam euismod facilisis cursus. Etiam id rhoncus odio. Suspendisse potenti. Quisque id erat justo. Integer porta fermentum tincidunt.</p>
               <span>View my <a href="#" class="card-link">resume</a></span>
@@ -118,10 +118,73 @@
     </div>
   </section>
 
-  <section id="projects">
-    <h2>PROJECTS</h2>
-
+  <section id="projects" class="mt-5" style="background: #090B10">
+    <h2 class="text-center p-5">PROJECTS</h2>
+    <div id="carouselControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="carousel-caption">
+            <a href="https://watsonm19.github.io/bioSite/main/index.html" target="_blank"><h3>bioSite</h3></a>
+            <p>Morbi ipsum lorem, eleifend eget nulla ut, aliquet vehicula velit.</p>
+            <a href="https://drive.google.com/file/d/1PXHl_Y03_a7K9WBx7wRzapR9bLqUFd6j/view?usp=sharing" target="_blank">bioSite prototype</a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="carousel-caption">
+            <a href="https://github.com/watsonm19/web-231" target="_blank"><h3>Enterprise JavaScript Repository</h3></a>
+            <p>Bellevue University, WEB-231, GitHub</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="carousel-caption">
+            <a href="https://drive.google.com/file/d/1JIzXFHmcaZElPifsR_LHJly49hwzulse/view?usp=sharing" target="_blank"><h3>Mark's Personal Portfolio Protype</h3></a>
+            <p>The wireframes for this page! Made with NinjaMock.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="carousel-caption">
+            <a href="https://github.com/watsonm19/web-330" target="_blank"><h3>Enterprise JavaScript II Repository</h3></a>
+            <p>Bellevue University, WEB-330, GitHub</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </section>
+
+  <section id="contact" class="mt-5">
+    <h2 class="text-center p-5">CONTACT</h2>
+    <div class="container">
+      <form action="">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" class="form-control" id="name">
+        </div>
+        <div class="form-group">
+          <label for="email">Email address</label>
+          <input type="email" class="form-control" id="email">
+        </div>
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea class="form-control" id="message" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+  </section>
+
+  <hr class="mt-5">
+
+  <footer class="p-5">
+    <p class="text-center">Mark Watson's Portfolio | 2021</p>
+  </footer>
 
   <!-- HOSTED -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
