comments and code organization

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1>markwatsonjr@portfolio ~ % <span id="intro"></span><span class="type-block"><</span></h1>
       <h1 id="type2" class="pt-1 hide">markwatsonjr@portfolio ~ % <span id="title"></span><span class="type-block"><</span></h1>
       <h1 id="type3" class="pt-1 hide">markwatsonjr@portfolio ~ % <span id="open-this"></span><span class="type-block"><</span></h1>
-      <h1 id="type4" class="hide pt-2">Loading<span id="loading"></span></h1>
+      <h1 id="loading" class="hide pt-2">Loading<span id="load"></span></h1>
     </div>
     <span id="view-work">view my work</span>
     <a href="#projects"><span id="down">&#8595;</span></a>
