added event listener to change theme on click

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
 
   <section id="welcome">
+    <p id="theme-credit">Colors inspired by <span id="creator">Material Theme</span>'s "<span id="theme-name">Ocean High Contrast</span>" Theme</p>
+    <span id="toggle-colors" class="badge badge-dark">Change Theme</span>
     <div id="cli" class="container p-5">
       <h1>markwatsonjr@portfolio ~ % <span id="intro"></span><span class="type-block"><</span></h1>
       <h1 id="type2" class="pt-1 hide">markwatsonjr@portfolio ~ % <span id="title"></span><span class="type-block"><</span></h1>
@@ -118,7 +120,7 @@
     </div>
   </section>
 
-  <section id="projects" class="mt-5" style="background: #090B10">
+  <section id="projects" class="mt-5">
     <h2 class="text-center p-5">PROJECTS</h2>
     <div id="carouselControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
@@ -192,5 +194,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <!-- LOCAL -->
   <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="themes.js"></script>
 </body>
 </html>
