added responsiveness to welcome section

--- a/index.html
+++ b/index.html
@@ -50,18 +50,16 @@
   <section id="about" class="mt-5">
     <h2 class="text-center p-5">ABOUT</h2>
     <div class="container-fluid p-5">
-      <div class="row justify-content-center">
+      <div class="row mb-5 justify-content-center">
         <figure class="col text-center">
           <img id="profile-img" src="imgs/mjw-profile-min.jpg" alt="">
         </figure>
-        <div id="card-container" class="col">
-          <div class="card" style="width: 35rem;">
-            <div class="card-body">
-              <h5 class="card-title">Title here</h5>
-              <p class="card-text"> Quisque nisl ex, feugiat quis odio eget, semper mollis diam. Morbi ac dignissim lorem, vitae faucibus nunc. Fusce erat urna, consequat non consequat ut, pulvinar quis ligula. In luctus dictum nisl, at finibus felis. Morbi scelerisque leo augue, cursus facilisis augue fermentum sed. Nam eu tortor sed diam tincidunt rhoncus. Nunc eget scelerisque justo, pulvinar mattis nibh. Nulla posuere neque et nibh mollis lobortis. Curabitur tincidunt mollis elit, ac sagittis lacus pretium sit amet. Nulla dapibus, justo in pretium tristique, eros sapien commodo sem.</p>
-              <p>Donec vitae molestie arcu. Donec maximus lorem ac lacus sagittis convallis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed eget pulvinar mi. Donec non ornare velit, eget egestas neque. Pellentesque mattis accumsan diam, eu eleifend erat efficitur sit amet. Quisque non nisl id urna euismod lobortis ut id urna. Aenean blandit risus sit amet tortor sagittis rhoncus. Quisque a viverra arcu, at pretium purus. Aliquam euismod facilisis cursus. Etiam id rhoncus odio. Suspendisse potenti. Quisque id erat justo. Integer porta fermentum tincidunt.</p>
-              <span>View my <a href="#" class="card-link">resume</a></span>
-            </div>
+        <div class="col" style="min-width: 400px">
+          <div class="container">
+            <h5>Title here</h5>
+            <p> Quisque nisl ex, feugiat quis odio eget, semper mollis diam. Morbi ac dignissim lorem, vitae faucibus nunc. Fusce erat urna, consequat non consequat ut, pulvinar quis ligula. In luctus dictum nisl, at finibus felis. Morbi scelerisque leo augue, cursus facilisis augue fermentum sed. Nam eu tortor sed diam tincidunt rhoncus. Nunc eget scelerisque justo, pulvinar mattis nibh. Nulla posuere neque et nibh mollis lobortis. Curabitur tincidunt mollis elit, ac sagittis lacus pretium sit amet. Nulla dapibus, justo in pretium tristique, eros sapien commodo sem.</p>
+            <p>Donec vitae molestie arcu. Donec maximus lorem ac lacus sagittis convallis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed eget pulvinar mi. Donec non ornare velit, eget egestas neque. Pellentesque mattis accumsan diam, eu eleifend erat efficitur sit amet. Quisque non nisl id urna euismod lobortis ut id urna. Aenean blandit risus sit amet tortor sagittis rhoncus. Quisque a viverra arcu, at pretium purus. Aliquam euismod facilisis cursus. Etiam id rhoncus odio. Suspendisse potenti. Quisque id erat justo. Integer porta fermentum tincidunt.</p>
+            <span>View my <a href="#" class="card-link">resume</a></span>
           </div>
         </div>
       </div>
