--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div id="education" class="col">
           <h3 class="text-center">education</h3>
+          <br>
           <div class="card" style="width: 18rem;">
             <div class="card-body">
               <h5 class="card-title">Portland Community College</h5>
@@ -76,6 +77,7 @@
               <li class="list-group-item">Associate of Science, GPA: 3.72</li>
             </ul>
           </div>
+          <br>
           <div class="card" style="width: 18rem;">
             <div class="card-body">
               <h5 class="card-title">Bellevue University</h5>
@@ -87,7 +89,7 @@
             </ul>
           </div>
         </div>
-        <div class="col">
+        <div id="skills" class="col">
           <h3 class="text-center">skills</h3>
           <div class="container">
             <div class="row justify-content-center">
