about section layout tweaks, image re-sizing

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <figure class="col text-center">
           <img id="profile-img" src="imgs/mjw-profile-min.jpg" alt="">
         </figure>
-        <div class="col" style="min-width: 400px">
+        <div class="col" style="min-width: 400px;">
           <div class="container">
             <h5>Title here</h5>
             <p> Quisque nisl ex, feugiat quis odio eget, semper mollis diam. Morbi ac dignissim lorem, vitae faucibus nunc. Fusce erat urna, consequat non consequat ut, pulvinar quis ligula. In luctus dictum nisl, at finibus felis. Morbi scelerisque leo augue, cursus facilisis augue fermentum sed. Nam eu tortor sed diam tincidunt rhoncus. Nunc eget scelerisque justo, pulvinar mattis nibh. Nulla posuere neque et nibh mollis lobortis. Curabitur tincidunt mollis elit, ac sagittis lacus pretium sit amet. Nulla dapibus, justo in pretium tristique, eros sapien commodo sem.</p>
@@ -67,7 +67,7 @@
         <div id="education" class="col">
           <h3 class="text-center">education</h3>
           <br>
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Portland Community College</h5>
               <p class="card-text">Portland, OR</p>
@@ -78,7 +78,7 @@
             </ul>
           </div>
           <br>
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Bellevue University</h5>
               <p class="card-text">Bellevue, NE</p>
@@ -89,9 +89,9 @@
             </ul>
           </div>
         </div>
-        <div id="skills" class="col">
+        <div id="skills-section" class="col">
           <h3 class="text-center">skills</h3>
-          <div class="container">
+          <div class="container mt-3">
             <div class="row justify-content-center">
               <ul class="skills list-style-none">
                 <li><span class="badge badge-dark">HTML</span></li>
