final version 1 commit

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Mark Watson">
+  <meta name="keywords" content="Mark, Watson, portfolio, web, developer, software, engineer, javascript">
+  <meta name="description" content="Mark Watson, Jr. | Web Portfolio 2021 | Project Showcase">
   <title>Mark Watson's Portfolio</title>
   <!-- HOSTED -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -12,7 +15,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <!-- Welcome Section -->
   <section id="welcome">
     <p id="theme-credit">Colors inspired by <span id="creator">Material Theme</span>'s "<span id="theme-name">Ocean High Contrast</span>" Theme</p>
@@ -20,7 +22,7 @@
     <div id="cli" class="container p-5 toggle-colors">
       <h1>markwatsonjr@portfolio ~ % <span id="intro"></span><span class="type-block"><</span></h1>
       <h1 id="type2" class="pt-1 hide">markwatsonjr@portfolio ~ % <span id="title"></span><span class="type-block"><</span></h1>
-      <h1 id="type3" class="pt-1 hide">markwatsonjr@portfolio ~ % <span id="open-this"></span><span id="change-theme-text"></span><span class="type-block"><</span></h1>
+      <h1 id="type3" class="pt-1 hide">markwatsonjr@portfolio ~ % <span id="open-this"></span><span id="swap-theme-text"></span><span class="type-block"><</span></h1>
       <h1 id="loading" class="hide pt-2">Loading<span id="load"></span></h1>
     </div>
     <span id="view-work">view my work</span>
@@ -34,8 +36,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="mr-4 nav-item active">
-          <a class="nav-link" href="#welcome">Home <span class="sr-only">(current)</span></a>
+        <li class="mr-4 nav-item">
+          <a class="nav-link" href="#welcome">Welcome</a>
         </li>
         <li class="mr-4 nav-item">
           <a class="nav-link" href="#about">About</a>
