final version 1 commit

--- a/index.html
+++ b/index.html
@@ -213,8 +213,9 @@
   <section id="contact" class="mt-5">
     <h2 class="text-center p-5">CONTACT</h2>
     <div class="text-center mb-5">
-      <p>Let's get to work...</p>
-      <p>I would love to join your team!</p>
+      <h6>Let's get to work...</h6>
+      <br>
+      <h6>I would love to join your team!</h6>
     </div>
     <div class="container">
       <form action="mailto:watsonpt7@gmail.com" method="POST" enctype="multipart/form-data" name="email-form">
