final version 1 commit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="Mark, Watson, portfolio, web, developer, software, engineer, javascript">
   <meta name="description" content="Mark Watson, Jr. | Web Portfolio 2021 | Project Showcase">
   <title>Mark Watson's Portfolio</title>
+  <!-- Stylesheets / Bootstrap 4 / Imported Font -->
   <!-- HOSTED -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -232,7 +233,7 @@
           <textarea class="form-control" id="message" name="message" rows="4"></textarea>
         </div>
         <div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary m-2">Submit</button>
           <a href="mailto:watsonpt7@gmail.com">Click here if not able to submit</a>
         </div>
       </form>
@@ -246,6 +247,7 @@
     <p class="text-center">Mark Watson's Portfolio | 2021</p>
   </footer>
 
+  <!-- Scripts and Libraries -->
   <!-- HOSTED -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
