--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
   <!-- LOCAL -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!-- Welcome Section -->
@@ -59,7 +59,7 @@
     <div class="container-fluid p-5">
       <div class="row mb-5 justify-content-center">
         <figure class="col text-center">
-          <img id="profile-img" src="imgs/mjw-profile-min.jpg" alt="">
+          <img id="profile-img" src="imgs/mjw-profile-min.jpg" alt="Mark Watson head-shot">
         </figure>
         <div id="about-me-text" class="col">
           <div class="container">
@@ -253,7 +253,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <!-- LOCAL -->
-  <script type="text/javascript" src="script.js"></script>
-  <script type="text/javascript" src="themes.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
+  <script type="text/javascript" src="js/themes.js"></script>
 </body>
 </html>
