--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </section>
 
   <!-- Nav -->
-  <nav class="navbar sticky-top navbar-expand-lg">
+  <nav id="nav-main" class="navbar sticky-top navbar-expand-lg navbar-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
