--- a/index.html
+++ b/index.html
@@ -197,6 +197,21 @@
             <p>Bellevue University, WEB-330, GitHub Repo</p>
           </div>
         </div>
+        <!-- Gryffindor JS Trivia -->
+        <div class="carousel-item">
+          <div class="carousel-caption">
+            <a href="https://kevinjones.engineer/house-of-gryffindor/index.html" target="_blank">
+              <h3>JavaScript Trivia Game</h3>
+              <div class="img-container m-2">
+                <img src="imgs/gryffindor-js-quiz.png" alt="Gryffindor JavaScript Quiz image">
+                <div class="overlay">
+                  <span>HTML, CSS, JavaScript - Knockout.js (MVVM), Group Collaboration via GitHub</span>
+                </div>
+              </div>
+            </a>
+            <p>A JavaScript Quiz with a Gryffindor Theme from Harry Potter!</p>
+          </div>
+        </div>
       </div>
       <!-- Carousal Controls -->
       <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
