add ems to projects

--- a/index.html
+++ b/index.html
@@ -212,6 +212,22 @@
             <p>A JavaScript Quiz with a Gryffindor Theme from Harry Potter!</p>
           </div>
         </div>
+        <!-- EMS -->
+        <div class="carousel-item">
+          <div class="carousel-caption">
+            <a href="https://watson-ems-app.herokuapp.com/" target="_blank">
+              <h3>Employee Management System</h3>
+              <div class="img-container m-2">
+                <img src="imgs/ems-app.png" alt="Gryffindor JavaScript Quiz image">
+                <div class="overlay">
+                  <span>HTML, CSS, JavaScript, Bootstrap, Node.js, Express, MongoDB, other NPM dependencies, deployed on Heroku</span>
+                </div>
+              </div>
+            </a>
+            <p>A simple Employee Management System that stores employee data to view.</p>
+            <a href="https://github.com/watsonm19/web-340/tree/main/ems" target="_blank">EMS GitHub Repository</a>
+          </div>
+        </div>
       </div>
       <!-- Carousal Controls -->
       <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
