add assignment 1.4 from BU - data structures

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Mark Watson">
   <meta name="keywords" content="Mark, Watson, portfolio, web, developer, software, engineer, javascript">
   <meta name="description" content="Mark Watson, Jr. | Web Portfolio 2021 | Project Showcase">
-  <title>Mark Watson's Portfolio</title>
+  <title>MW | Developer Portfolio</title>
   <!-- Stylesheets / Bootstrap 4 / Imported Font -->
   <!-- HOSTED -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -148,7 +148,7 @@
             <a href="https://drive.google.com/file/d/1PXHl_Y03_a7K9WBx7wRzapR9bLqUFd6j/view?usp=sharing" target="_blank">bioSite prototype</a>
           </div>
         </div>
-        <!-- WEB 231 Repo-->
+        <!-- WEB 231 Repo -->
         <div class="carousel-item">
           <div class="carousel-caption">
             <a href="https://github.com/watsonm19/web-231" target="_blank">
@@ -178,7 +178,9 @@
                 </div>
               </div>
             </a>
-            <figcaption class="img-cred mb-2"><span>Photo by <a href="https://unsplash.com/@visualdesign_inspiration?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Visual Design</a> on <a href="https://unsplash.com/s/photos/wireframe?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></figcaption>
+            <figcaption class="img-cred mb-2">
+              <span>Photo by <a href="https://unsplash.com/@visualdesign_inspiration?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Visual Design</a> on <a href="https://unsplash.com/s/photos/wireframe?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+            </figcaption>
             <p>The wireframes for this portfolio page! Made with NinjaMock.</p>
           </div>
         </div>
@@ -226,6 +228,24 @@
             </a>
             <p>A simple Employee Management System that stores employee data to view.</p>
             <a href="https://github.com/watsonm19/web-340/tree/main/ems" target="_blank">EMS GitHub Repository</a>
+          </div>
+        </div>
+        <!-- Diagrams -->
+        <div class="carousel-item">
+          <div class="carousel-caption">
+            <a href="/web-335/watson-diagrams.html" target="_blank">
+              <h3>Diagrams</h3>
+              <div class="img-container m-2">
+                <img src="imgs/diagrams-img.jpg" alt="A person drawing diagrams">
+                <div class="overlay">
+                  <span>UMLet, JSON</span>
+                </div>
+              </div>
+            </a>
+            <figcaption class="img-cred mb-2">
+              <span>Photo by <a href="https://unsplash.com/@homajob?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Scott Graham</a> on <a href="/s/photos/web-diagrams?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></span>
+            </figcaption>
+            <p>Diagrams from WEB 335: Introduction to NoSQL</p>
           </div>
         </div>
       </div>
