no target on diagrams link

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <!-- Diagrams -->
         <div class="carousel-item">
           <div class="carousel-caption">
-            <a href="/web-335/watson-diagrams.html" target="_blank">
+            <a href="/web-335/watson-diagrams.html">
               <h3>Diagrams</h3>
               <div class="img-container m-2">
                 <img src="imgs/diagrams-img.jpg" alt="A person drawing diagrams">
