--- a/web-335/watson-diagrams.html
+++ b/web-335/watson-diagrams.html
@@ -65,7 +65,7 @@
     </section>
 
     <div class="text-center mt-3">
-      <button class="btn btn-primary" onclick="window.open('https://watsonm19.github.io/','_self')">
+      <button class="btn btn-primary" onclick="window.open('https://watsonm19.github.io/#projects)">
         Go Back
       </button>
     </div>
