add rest presentation on new page - web-420 1.3

--- a/index.html
+++ b/index.html
@@ -248,6 +248,16 @@
             <p>Diagrams from WEB 335: Introduction to NoSQL</p>
           </div>
         </div>
+        <!-- Presentations -->
+        <div id="presentations" class="carousel-item">
+          <div class="carousel-caption">
+            <h3>Presentations</h3>
+            <br>
+            <a href="/web-420/watson-rest.html">Representational State Transfer (REST)</a>
+            <br><br>
+            <p>Presentations from WEB 420: RESTful APIs</p>
+          </div>
+        </div>
       </div>
       <!-- Carousal Controls -->
       <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
